added  functionality for creting seating groups
